--- a/pages/profile/privacy/privacy.wxml
+++ b/pages/profile/privacy/privacy.wxml
@@ -6,244 +6,33 @@
 <message-notification />
 
 <view class="privacy-page">
-  <!-- 基本信息 -->
-  <view class="card menu-card" wx:if="{{fieldAvailable.avatar || fieldAvailable.nickname || fieldAvailable.name || fieldAvailable.gender || fieldAvailable.birthDate || fieldAvailable.phone || fieldAvailable.constellation || fieldAvailable.signature || fieldAvailable.wxNum || fieldAvailable.qqNum || fieldAvailable.email}}">
-    <view class="section-title">基本信息</view>
-    <view class="menu-item" wx:if="{{fieldAvailable.avatar}}">
+  <!-- 动态渲染分组 -->
+  <view class="card menu-card" wx:for="{{groupedPrivacyList}}" wx:key="title" wx:for-index="groupIndex">
+    <view class="section-title">{{item.title}}</view>
+    <!-- 动态渲染每个隐私项 -->
+    <view class="menu-item" wx:for="{{item.items}}" wx:key="fieldCode" wx:for-item="privacyItem" wx:for-index="itemIndex">
       <view class="menu-left">
-        <text class="menu-icon">👤</text>
         <view class="menu-content">
-          <text class="menu-name">头像</text>
-          <text class="menu-desc">其他用户可以看到您的头像</text>
+          <text class="menu-name">{{privacyItem.fieldName}}</text>
+          <text class="menu-desc">开启后隐藏该信息</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showAvatar}}" bindchange="togglePrivacy" data-key="showAvatar" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.nickname}}">
-      <view class="menu-left">
-        <text class="menu-icon">✏️</text>
-        <view class="menu-content">
-          <text class="menu-name">昵称</text>
-          <text class="menu-desc">其他用户可以看到您的昵称</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showNickname}}" bindchange="togglePrivacy" data-key="showNickname" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.name}}">
-      <view class="menu-left">
-        <text class="menu-icon">👨</text>
-        <view class="menu-content">
-          <text class="menu-name">真实姓名</text>
-          <text class="menu-desc">其他用户可以看到您的真实姓名</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showName}}" bindchange="togglePrivacy" data-key="showName" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.gender}}">
-      <view class="menu-left">
-        <text class="menu-icon">⚧</text>
-        <view class="menu-content">
-          <text class="menu-name">性别</text>
-          <text class="menu-desc">其他用户可以看到您的性别</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showGender}}" bindchange="togglePrivacy" data-key="showGender" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.birthDate}}">
-      <view class="menu-left">
-        <text class="menu-icon">🎂</text>
-        <view class="menu-content">
-          <text class="menu-name">出生日期</text>
-          <text class="menu-desc">其他用户可以看到您的出生日期</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showBirthDate}}" bindchange="togglePrivacy" data-key="showBirthDate" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.phone}}">
-      <view class="menu-left">
-        <text class="menu-icon">📱</text>
-        <view class="menu-content">
-          <text class="menu-name">手机号</text>
-          <text class="menu-desc">其他用户可以看到您的手机号</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showPhone}}" bindchange="togglePrivacy" data-key="showPhone" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.constellation}}">
-      <view class="menu-left">
-        <text class="menu-icon">⭐</text>
-        <view class="menu-content">
-          <text class="menu-name">星座</text>
-          <text class="menu-desc">其他用户可以看到您的星座</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showConstellation}}" bindchange="togglePrivacy" data-key="showConstellation" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.signature}}">
-      <view class="menu-left">
-        <text class="menu-icon">✍️</text>
-        <view class="menu-content">
-          <text class="menu-name">个性签名</text>
-          <text class="menu-desc">其他用户可以看到您的个性签名</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showSignature}}" bindchange="togglePrivacy" data-key="showSignature" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.wxNum}}">
-      <view class="menu-left">
-        <text class="menu-icon">💬</text>
-        <view class="menu-content">
-          <text class="menu-name">微信号</text>
-          <text class="menu-desc">其他用户可以看到您的微信号</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showWxNum}}" bindchange="togglePrivacy" data-key="showWxNum" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.qqNum}}">
-      <view class="menu-left">
-        <text class="menu-icon">🐧</text>
-        <view class="menu-content">
-          <text class="menu-name">QQ号</text>
-          <text class="menu-desc">其他用户可以看到您的QQ号</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showQqNum}}" bindchange="togglePrivacy" data-key="showQqNum" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.email}}">
-      <view class="menu-left">
-        <text class="menu-icon">📧</text>
-        <view class="menu-content">
-          <text class="menu-name">邮箱</text>
-          <text class="menu-desc">其他用户可以看到您的邮箱地址</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showEmail}}" bindchange="togglePrivacy" data-key="showEmail" color="#40B2E6" />
+      <switch
+        checked="{{privacyItem.checked}}"
+        bindchange="togglePrivacy"
+        data-group-index="{{groupIndex}}"
+        data-item-index="{{itemIndex}}"
+        data-field-code="{{privacyItem.fieldCode}}"
+        color="#40B2E6"
+      />
     </view>
   </view>
 
-  <!-- 位置信息 -->
-  <view class="card menu-card" wx:if="{{fieldAvailable.originProvince || fieldAvailable.curContinent || fieldAvailable.curCountry || fieldAvailable.curProvince || fieldAvailable.curCity || fieldAvailable.curCounty || fieldAvailable.address}}">
-    <view class="section-title">位置信息</view>
-    <view class="menu-item" wx:if="{{fieldAvailable.originProvince}}">
-      <view class="menu-left">
-        <text class="menu-icon">🏠</text>
-        <view class="menu-content">
-          <text class="menu-name">籍贯</text>
-          <text class="menu-desc">其他用户可以看到您的籍贯</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showOriginProvince}}" bindchange="togglePrivacy" data-key="showOriginProvince" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.curContinent}}">
-      <view class="menu-left">
-        <text class="menu-icon">🌍</text>
-        <view class="menu-content">
-          <text class="menu-name">当前所在洲</text>
-          <text class="menu-desc">其他用户可以看到您的当前所在洲</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showCurContinent}}" bindchange="togglePrivacy" data-key="showCurContinent" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.curCountry}}">
-      <view class="menu-left">
-        <text class="menu-icon">🌏</text>
-        <view class="menu-content">
-          <text class="menu-name">当前所在国</text>
-          <text class="menu-desc">其他用户可以看到您的当前所在国</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showCurCountry}}" bindchange="togglePrivacy" data-key="showCurCountry" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.curProvince}}">
-      <view class="menu-left">
-        <text class="menu-icon">📍</text>
-        <view class="menu-content">
-          <text class="menu-name">当前所在省市</text>
-          <text class="menu-desc">其他用户可以看到您的当前所在省市</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showCurProvince}}" bindchange="togglePrivacy" data-key="showCurProvince" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.curCity}}">
-      <view class="menu-left">
-        <text class="menu-icon">🏙️</text>
-        <view class="menu-content">
-          <text class="menu-name">当前所在市区</text>
-          <text class="menu-desc">其他用户可以看到您的当前所在市区</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showCurCity}}" bindchange="togglePrivacy" data-key="showCurCity" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.curCounty}}">
-      <view class="menu-left">
-        <text class="menu-icon">🏘️</text>
-        <view class="menu-content">
-          <text class="menu-name">当前所在村/区</text>
-          <text class="menu-desc">其他用户可以看到您的当前所在村/区</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showCurCounty}}" bindchange="togglePrivacy" data-key="showCurCounty" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.address}}">
-      <view class="menu-left">
-        <text class="menu-icon">🏡</text>
-        <view class="menu-content">
-          <text class="menu-name">详细地址</text>
-          <text class="menu-desc">其他用户可以看到您的详细地址</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showAddress}}" bindchange="togglePrivacy" data-key="showAddress" color="#40B2E6" />
-    </view>
-  </view>
-
-  <!-- 证件信息 -->
-  <view class="card menu-card" wx:if="{{fieldAvailable.identifyType || fieldAvailable.identifyCode}}">
-    <view class="section-title">证件信息</view>
-    <view class="menu-item" wx:if="{{fieldAvailable.identifyType}}">
-      <view class="menu-left">
-        <text class="menu-icon">🪪</text>
-        <view class="menu-content">
-          <text class="menu-name">证件类型</text>
-          <text class="menu-desc">其他用户可以看到您的证件类型</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showIdentifyType}}" bindchange="togglePrivacy" data-key="showIdentifyType" color="#40B2E6" />
-    </view>
-    <view class="menu-item" wx:if="{{fieldAvailable.identifyCode}}">
-      <view class="menu-left">
-        <text class="menu-icon">🔢</text>
-        <view class="menu-content">
-          <text class="menu-name">证件号</text>
-          <text class="menu-desc">其他用户可以看到您的证件号</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showIdentifyCode}}" bindchange="togglePrivacy" data-key="showIdentifyCode" color="#40B2E6" />
-    </view>
-  </view>
-
-  <!-- 个人简介 -->
-  <view class="card menu-card" wx:if="{{fieldAvailable.description}}">
-    <view class="section-title">个人简介</view>
-    <view class="menu-item">
-      <view class="menu-left">
-        <text class="menu-icon">📝</text>
-        <view class="menu-content">
-          <text class="menu-name">个人简介</text>
-          <text class="menu-desc">其他用户可以看到您的个人简介</text>
-        </view>
-      </view>
-      <switch checked="{{privacySettings.showDescription}}" bindchange="togglePrivacy" data-key="showDescription" color="#40B2E6" />
-    </view>
+  <!-- 空状态提示 -->
+  <view class="empty-tip" wx:if="{{groupedPrivacyList.length === 0}}">
+    <text>暂无隐私设置项</text>
   </view>
 
   <!-- 底部留白 -->
   <view class="bottom-space"></view>
 </view>
-
-
-
-
-
-
-
-
