--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -612,6 +612,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 .label_9-2 {
@@ -632,6 +633,31 @@
   white-space: nowrap;
   line-height: 31rpx;
   margin-top: 9rpx;
+}
+
+.construction-tag {
+  position: absolute;
+  top: -12rpx;
+  right: -40rpx;
+  width: 67rpx;
+  height: 27rpx;
+  background: linear-gradient(90deg, #FF6B00 0%, #FFB800 100%);
+  border: 1rpx solid #FFFFFF;
+  border-radius: 13.5rpx;
+  color: rgba(255, 255, 255, 1);
+  font-size: 16rpx;
+  font-family: PingFangSC-Semibold;
+  font-weight: 600;
+  line-height: 27rpx;
+  text-align: center;
+  opacity: 1;
+  box-sizing: border-box;
+  white-space: nowrap;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
 }
 
 .image-text_8-3 {
