--- a/pages/alumni-association/list/list.wxml
+++ b/pages/alumni-association/list/list.wxml
@@ -69,14 +69,14 @@
           </view>
 
           <!-- 学校名称和地点信息在一行展示 -->
-          <view class="school-location-row">
-            <view wx:if="{{item.schoolName || item.schoolId}}" class="school-location-item">
+          <view class="meta-row">
+            <view wx:if="{{item.schoolName || item.schoolId}}" class="meta-item school-name-item">
               <image class="location-icon" src="{{iconSchool}}" mode="aspectFit" />
-              <text>{{item.schoolName || item.schoolId}}</text>
+              <text class="truncate">{{item.schoolName || item.schoolId}}</text>
             </view>
-            <view wx:if="{{item.location}}" class="school-location-item">
+            <view wx:if="{{item.location}}" class="meta-item location-item">
               <image class="location-icon" src="{{iconLocation}}" mode="aspectFit" />
-              <text>{{item.location}}</text>
+              <text class="truncate">{{item.location}}</text>
             </view>
           </view>
 
