--- a/pages/alumni/list/list.wxml
+++ b/pages/alumni/list/list.wxml
@@ -67,15 +67,15 @@
             <view wx:if="{{item.isCertified}}" class="cert-badge">✓ 认证</view>
           </view>
 
-          <!-- 学校和地点在一行展示 -->
-          <view class="school-location-row">
-            <view wx:if="{{item.school}}" class="school-location-item">
+          <!-- 学校和地点信息展示 -->
+          <view class="meta-row">
+            <view wx:if="{{item.school}}" class="meta-item">
               <image class="location-icon" src="{{iconSchool}}" mode="aspectFit" />
-              <text>{{item.school}}</text>
+              <text class="truncate">{{item.school}}</text>
             </view>
-            <view wx:if="{{item.location}}" class="school-location-item">
+            <view wx:if="{{item.location}}" class="meta-item location-item">
               <image class="location-icon" src="{{iconLocation}}" mode="aspectFit" />
-              <text>{{item.location}}</text>
+              <text class="truncate">{{item.location}}</text>
             </view>
           </view>
 
